2025-09-26  Dirk Eddelbuettel  <edd@debian.org>

	* R/xptr.R: Adjust roxygen2 comment to ensure '.registration = TRUE'
	and '.fixes = "C_"' is passed to NAMESPACE; .Call() adjusted
	* NAMESPACE: Regenerated
	* src/xptr.c (R_init_xptr): Also call R_forceSymbols(dll, TRUE)

	* README.md: Edited throughout, added badges, r-universe mention,
	expand example to new non-pointer format character address

2025-09-25  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Authors@R): New Maintainer
	* DESCRIPTION (Version, Date): New minor version and date

	* src/xptr.c (xptr_address): New argument to use '%lld' instead of '%p'
	* R/xptr.R (xptr_address): Support new argument
	* man/xptr_address.Rd: Documentation

	* .github/workflows/ci.yaml: Support continuous integration