@@ -1,12 +1,12 @@
 Package: xptr
 Type: Package
-Title: Manipulating External Pointer
+Title: Manipulating External Pointers
 Version: 1.1.3.1
-Date: 2025-09-25
+Date: 2025-09-26
 Authors@R: c(person("Randy", "Lai", role = "aut"),
-             person("Dirk", "Eddelbuettel", role = c("ctb", "cre"), email = "edd@debian.org"))
-URL: https://randy3k.github.io/xptr/
-Description: There is limited native support for external pointers in the R interface. 
+             person("Dirk", "Eddelbuettel", role = c("aut", "cre"), email = "edd@debian.org"))
+URL: https://github.com/eddelbuettel/xptr/
+Description: There is limited native support for external pointers in the R interface.
  This package provides some basic tools to verify, create and modify 'externalptr' objects.
 License: MIT + file LICENSE
 NeedsCompilation: yes
