@@ -1,10 +1,8 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/xptr.R
-\docType{package}
 \name{xptr}
-\alias{xptr-package}
 \alias{xptr}
-\title{Manipulating External Pointer}
+\title{Manipulating External Pointers}
 \description{
 There is limited native support for external pointers in the R interface.
 This package provides some basic tools to verify, create and modify 'externalptr' objects.
@@ -19,25 +17,11 @@ xptr_clear(a)
 is_null_xptr(a)
 set_xptr_address(a, xptr_address(b))
 xptr_address(a)
+xptr_address(a, FALSE)
 }
 \references{
-\itemize{
-\item \url{https://cran.r-project.org/doc/manuals/r-release/R-exts.html#External-pointers-and-weak-references}
-}
-}
-\seealso{
-Useful links:
-\itemize{
-  \item \url{https://randy3k.github.io/xptr/}
-}
-
+\url{https://cran.r-project.org/doc/manuals/r-release/R-exts.html#External-pointers-and-weak-references}
 }
 \author{
-\strong{Maintainer}: Dirk Eddelbuettel \email{edd@debian.org} [contributor]
-
-Authors:
-\itemize{
-  \item Randy Lai
-}
-
+Randy Lai and Dirk Eddelbuettel
 }
